--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,13 @@
         android:hint="Search"
         android:inputType="textPersonName"
         />
-    <EditText
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="search"
+        android:layout_alignRight="@id/searchInput"/>
+    <TextView
         android:id="@+id/searchOuput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,4 +40,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/searchOuput"/>
+
+
 </RelativeLayout>
